Refactor UpsertPrivateSegmentListModalComponent and CommonTagsInputComponent templates

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
@@ -43,6 +43,8 @@
     <app-common-tags-input
       formControlName="tags"
       [inputType]="CommonTagInputType.TAGS"
+      label="feature-flags.upsert-flag-modal.tags-label.text"
+      placeholder="feature-flags.upsert-flag-modal.tags-placeholder.text"
     ></app-common-tags-input>
   </form>
 </app-common-dialog>
