Allow setting the label and placeholder through modal config

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -43,8 +43,8 @@
       <app-common-tags-input
         formControlName="values"
         [inputType]="CommonTagInputType.VALUES"
-        label="feature-flags.upsert-list-modal.values-label.text"
-        placeholder="feature-flags.upsert-list-modal.values-placeholder.text"
+        [label]="config.valuesLabel"
+        [placeholder]="config.valuesPlaceholder"
         [forceValidation]="forceValidation"
         (downloadRequested)="onDownloadRequested($event)"
       ></app-common-tags-input>
