Display warning icon when enabled but no participants defined

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -7,6 +7,11 @@
     [updatedAt]="flag.updatedAt"
     [showViewLogs]="true"
     [chipClass]="flag.status"
+    [showWarning]="
+      flag.status === FEATURE_FLAG_STATUS.ENABLED &&
+      flag.filterMode !== FILTER_MODE.INCLUDE_ALL &&
+      !flag.featureFlagSegmentInclusion?.length
+    "
     (viewLogs)="viewLogsClicked($event)"
   ></app-common-section-card-title-header>
 
