--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.html
@@ -6,7 +6,7 @@
     (selectedTabChange)="onSelectedTabChange($event)"
     class="new-tab-group"
   >
-    <mat-tab *ngFor="let label of tabLabels">
+    <mat-tab *ngFor="let label of tabLabels" [disabled]="label === 'Data'">
       <ng-template mat-tab-label>
         <span class="ft-18-600">
           {{ label }}
