--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tabbed-section-card-footer/common-tabbed-section-card-footer.component.scss
@@ -1,4 +1,8 @@
 .footer-container {
   padding: 0 32px;
   border-top: 1px solid var(--light-grey-2);
+
+  ::ng-deep .mat-mdc-tab-disabled .mdc-tab__text-label {
+    opacity: 0.5; // Makes the disabled status more apparent
+  }
 }
