Refactor feature flag warning logic into centralized selectors

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -35,11 +35,7 @@
       <td mat-cell *matCellDef="let flag" class="status-column ft-14-400">
         <app-common-status-indicator-chip
           [chipClass]="flag.status"
-          [showWarning]="
-            flag.status === FEATURE_FLAG_STATUS.ENABLED &&
-            flag.filterMode !== FILTER_MODE.INCLUDE_ALL &&
-            !flag.featureFlagSegmentInclusion?.length
-          "
+          [showWarning]="(warningStatusForAllFlags$ | async)[flag.id]"
         ></app-common-status-indicator-chip>
       </td>
     </ng-container>
