--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -33,7 +33,10 @@
         {{ FLAG_TRANSLATION_KEYS.STATUS | translate }}
       </th>
       <td mat-cell *matCellDef="let flag" class="status-column ft-14-400">
-        <app-common-status-indicator-chip [chipClass]="flag.status"></app-common-status-indicator-chip>
+        <app-common-status-indicator-chip
+          [chipClass]="flag.status"
+          [showWarning]="(warningStatusForAllFlags$ | async)[flag.id]"
+        ></app-common-status-indicator-chip>
       </td>
     </ng-container>
 
