--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -22,10 +22,17 @@
     </mat-form-field>
     <mat-form-field *ngIf="selectedListType === LIST_TYPES.SEGMENT" appearance="outline">
       <mat-label class="ft-14-400">Segment</mat-label>
-      <input type="text" matInput formControlName="segment" [matAutocomplete]="auto" class="ft-14-400" />
-      <mat-hint class="form-hint ft-12-400">{{
-        'feature-flags.upsert-private-segment-list-modal' | translate
-      }}</mat-hint>
+      <input
+        type="text"
+        matInput
+        formControlName="segment"
+        [matAutocomplete]="auto"
+        [placeholder]="'feature-flags.upsert-list-modal.segment-placeholder.text' | translate"
+        class="ft-14-400"
+      />
+      <mat-error class="ft-12-400">
+        {{ 'feature-flags.upsert-list-modal.segment.error.message.text' | translate }}
+      </mat-error>
       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayAsSegmentName" requireSelection="true">
         <mat-option *ngFor="let segment of segmentsOptions$ | async" [value]="segment" class="ft-14-400">
           {{ segment.name }}
@@ -33,10 +40,20 @@
       </mat-autocomplete>
     </mat-form-field>
     <ng-container *ngIf="selectedListType && selectedListType !== LIST_TYPES.SEGMENT">
-      <app-common-tags-input formControlName="values"></app-common-tags-input>
+      <app-common-tags-input
+        formControlName="values"
+        [inputType]="CommonTagInputType.VALUES"
+        [label]="config.valuesLabel"
+        [placeholder]="config.valuesPlaceholder"
+        [forceValidation]="forceValidation"
+        (downloadRequested)="onDownloadRequested($event)"
+      ></app-common-tags-input>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Name</mat-label>
-        <input matInput formControlName="name" class="ft-14-400" />
+        <input matInput formControlName="name" placeholder="e.g., My schools" class="ft-14-400" />
+        <mat-hint class="form-hint ft-12-400">
+          {{ config.nameHint | translate }}
+        </mat-hint>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Description (optional)</mat-label>
