Revert "Merge branch 'dev' into wip/swheatley/cicd-199-jenkins-configs"
This reverts commit 3f8938850ed25e085570916d98604c9c9c8b524c, reversing
changes made to e79724282ffa90856b46c10e7f79aa58aac64b3b.

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.scss
@@ -25,6 +25,7 @@
     position: relative;
     margin-top: 16px;
     overflow: auto;
+    max-height: 450px;
 
     .spinner {
       position: sticky;
