--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
@@ -21,24 +21,18 @@
   </div>
 
   <div class="options-container dense-2">
-    <button
-      *ngIf="showMenuButton"
-      mat-icon-button
-      [matMenuTriggerFor]="menu"
-      [disabled]="!menuButtonItems.length"
-    >
+    <button *ngIf="showMenuButton" mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <ng-container *ngFor="let item of menuButtonItems">
-        <button
-          *ngIf="!item.disabled"
-          mat-menu-item
-          (click)="onMenuButtonItemClick(item.name)"
-        >
-          <span class="ft-14-400">{{ item.name }}</span>
-        </button>
-      </ng-container>
+      <button
+        *ngFor="let item of menuButtonItems"
+        mat-menu-item
+        [disabled]="item.disabled"
+        (click)="onMenuButtonItemClick(item.name)"
+      >
+        <span class="ft-14-400">{{ item.name }}</span>
+      </button>
     </mat-menu>
 
     <button
