--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.html
@@ -2,11 +2,7 @@
   <h5 class="title ft-18-700">
     {{ title | translate }} &nbsp;<span *ngIf="tableRowCount > 0"> ({{ tableRowCount }}) </span>
     <ng-container *ngIf="chipClass">
-      <app-common-status-indicator-chip
-        [chipClass]="chipClass"
-        [showWarning]="showWarning"
-        class="status-chip"
-      ></app-common-status-indicator-chip>
+      <app-common-status-indicator-chip class="status-chip" [chipClass]="chipClass"></app-common-status-indicator-chip>
     </ng-container>
   </h5>
   <p class="subtitle">
