--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/import-stratifications/import-stratifications.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/import-stratifications/import-stratifications.component.html
@@ -15,15 +15,7 @@
     <button class="shared-modal--modal-btn" mat-raised-button (click)="onCancelClick()">
       {{ 'global.cancel.text' | translate }}
     </button>
-    <button
-      mat-raised-button
-      class="shared-modal--modal-btn default-button"
-      [ngClass]="{
-        'default-button--disabled': uploadedFileCount === 0
-      }"
-      [disabled]="uploadedFileCount === 0"
-      (click)="importStratification()"
-    >
+    <button mat-raised-button class="shared-modal--modal-btn default-button" (click)="importStratification()">
       {{ 'global.import.text' | translate }}
     </button>
   </div>
