--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
@@ -40,11 +40,6 @@
       </mat-hint>
     </mat-form-field>
 
-    <app-common-tags-input
-      formControlName="tags"
-      [inputType]="CommonTagInputType.TAGS"
-      [label]="config.tagsLabel"
-      [placeholder]="config.tagsPlaceholder"
-    ></app-common-tags-input>
+    <app-common-tags-input formControlName="tags"></app-common-tags-input>
   </form>
 </app-common-dialog>
