--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -5,14 +5,17 @@
   padding: 0;
   height: 100%;
 
+  .mat-nested-tree-invisible {
+    display: none;
+  }
+
   .mat-nested-tree ul,
   .mat-nested-tree li {
     margin-top: 0;
     margin-bottom: 0;
     list-style-type: none;
   }
-  .leaf-node-icon {
-    width: 48px;
+  .leaf-node-button-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,6 +29,10 @@
   }
   .mat-nested-tree div[role='group'] > .mat-tree-node {
     padding-left: 40px;
+  }
+
+  .mat-nested-tree-invisible {
+    display: none;
   }
 
   .header {
