removes dynamic fill rule, was causing issues with browser finding path with a hash in it, appears not to be needed though

--- a/frontend/projects/upgrade/src/app/shared/components/shared-icons/shared-icons.component.html
+++ b/frontend/projects/upgrade/src/app/shared/components/shared-icons/shared-icons.component.html
@@ -143,7 +143,7 @@
           </linearGradient>
         </defs>
         <path
-          [attr.fill]="svgFill('linearGradient-light')"
+          fill="url(#linearGradient-light)"
           fill-rule="nonzero"
           d="M646.072576,0 C649.898487,-6.09802726e-14 653,3.10151337 653,6.927424 L653.003037,426.151522 C579.786575,411.586826 469.637291,420.953561 322.555183,454.251727 C176.706343,487.270691 69.1865039,496.757867 -0.00433348668,482.713255 L0,6.927424 C-2.24473218e-15,3.10151337 3.10151337,3.26772315e-14 6.927424,0 L646.072576,0 Z"
           id="path-2"
