--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -82,7 +82,7 @@
         {{ FLAG_TRANSLATION_KEYS.EXPOSURES | translate }}
       </th>
       <td mat-cell *matCellDef="let flag" class="exposures-column ft-14-400">
-        <span class="exposure">{{ flag.exposures }}</span>
+        <span class="exposure">{{ flag.featureFlagExposures }}</span>
       </td>
     </ng-container>
 
