--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -32,6 +32,7 @@
         <app-feature-flag-root-section-card-table
         [dataSource$]="dataSource$ | async"
         [isLoading$]="isLoadingFeatureFlags$"
+        [isSearchActive$]="isSearchActive$"
         >
         </app-feature-flag-root-section-card-table>
       </div>
