--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -24,14 +24,16 @@
   <!-- content -->
   <ng-container content *ngIf="isSectionCardExpanded">
     <ng-container *ngIf="!(isInitialLoading$ | async); else table">
-      <mat-spinner></mat-spinner>
+      <div class="mat-spinner-container">
+        <mat-spinner></mat-spinner>
+      </div>
     </ng-container>
 
     <ng-template #table>
       <div class="table-container">
         <app-feature-flag-root-section-card-table
-        [dataSource$]="dataSource$ | async"
-        [isLoading$]="isLoadingFeatureFlags$"
+          [dataSource$]="dataSource$ | async"
+          [isLoading$]="isLoadingFeatureFlags$"
         >
         </app-feature-flag-root-section-card-table>
       </div>
