--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -25,7 +25,7 @@
   <ng-container content *ngIf="isSectionCardExpanded">
     <ng-container *ngIf="!(isInitialLoading$ | async); else table">
       <div class="mat-spinner-container">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="60"></mat-spinner>
       </div>
     </ng-container>
 
