Display 'No matching feature flags found' message when no flags found from search (#1906)
* Display 'No matching feature flags found' message when no flags found from search

* Refactor isSearchActive$ to derive from store

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -32,8 +32,9 @@
     <ng-template #table>
       <div class="table-container">
         <app-feature-flag-root-section-card-table
-          [dataSource$]="dataSource$ | async"
-          [isLoading$]="isLoadingFeatureFlags$"
+        [dataSource$]="dataSource$ | async"
+        [isLoading$]="isLoadingFeatureFlags$"
+        [isSearchActive$]="isSearchActive$"
         >
         </app-feature-flag-root-section-card-table>
       </div>
