--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -18,12 +18,20 @@
       <td mat-cell *matCellDef="let flag" class="name-column ft-14-400">
         <a
           [routerLink]="['/featureflags', 'detail', flag.id]"
-          [matTooltip]="flag.name.length >= 30 ? flag.name : null"
+          [matTooltip]="flag.name.length > 24 ? flag.name : null"
           matTooltipPosition="above"
           class="flag-name"
         >
-          {{ flag.name | truncate: 30 }}
+          {{ flag.name | truncate: 24 }}
         </a>
+        <br />
+        <span
+          [matTooltip]="flag.description?.length > 35 ? flag.description : null"
+          matTooltipPosition="above"
+          class="flag-description ft-10-400"
+        >
+          {{ flag.description | truncate: 35 }}
+        </span>
       </td>
     </ng-container>
 
