filter flags by tags on feature flag root table

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -27,6 +27,7 @@
   <ng-container content>
     <app-common-section-card-overview-details
       [data]="flagOverviewDetails$ | async"
+      (tagItemClick)="filterFeatureFlagByChips($event)"
     ></app-common-section-card-overview-details>
   </ng-container>
 
