--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -66,11 +66,13 @@
         {{ FLAG_TRANSLATION_KEYS.TAGS | translate }}
       </th>
       <td mat-cell *matCellDef="let flag" class="tags-column ft-14-400 dense-2">
-        <mat-chip-listbox>
-          <mat-chip *ngFor="let tag of flag.tags" class="tag">
-            <span class="chip-label">
-              {{ tag }}
-            </span>
+        <mat-chip-listbox aria-label="Flag tags">
+          <mat-chip
+            *ngFor="let tag of flag.tags"
+            class="tag"
+            (click)="filterFeatureFlagByChips(tag, FeatureFlagSearchKey.TAG)"
+          >
+            <span class="chip-label">{{ tag }}</span>
           </mat-chip>
         </mat-chip-listbox>
       </td>
@@ -92,7 +94,7 @@
     <!-- No Data Row -->
     <tr *matNoDataRow>
       <td class="ft-14-400" [attr.colspan]="displayedColumns.length">
-        <ng-container *ngIf="(isSearchActive$ | async); else noFlags">
+        <ng-container *ngIf="isSearchActive$ | async; else noFlags">
           {{ 'feature-flags.no-matching-flags.text' | translate }}
         </ng-container>
         <ng-template #noFlags>
