--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/segment-experiment-list/segment-experiment-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/segment-experiment-list/segment-experiment-list.component.scss
@@ -52,12 +52,12 @@ $experiment-state-light-color: #8f9bb3;
           flex: 0 0 30%;
           justify-content: left;
         }
-        .cdk-column-experimentState {
-          flex: 0 0 30%;
+        .cdk-column-type {
+          flex: 0 0 15%;
           justify-content: left;
         }
-        .cdk-column-experimentContext {
-          flex: 0 0 15%;
+        .cdk-column-experimentState {
+          flex: 0 0 30%;
           justify-content: left;
         }
         .cdk-column-usedList {
