show warning after context is changed

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
@@ -38,14 +38,17 @@
           context
         }}</mat-option>
       </mat-select>
-      <mat-hint *ngIf="config.params.action !== UPSERT_FEATURE_FLAG_ACTION.EDIT" class="form-hint ft-12-400">
+      <mat-hint
+        *ngIf="!(config.params.action === UPSERT_FEATURE_FLAG_ACTION.EDIT && isContextChanged)"
+        class="form-hint ft-12-400"
+      >
         {{ 'feature-flags.upsert-flag-modal.app-context-hint.text' | translate }}
         <a class="learn-more-link" href="https://www.upgradeplatform.org/" target="_blank" rel="noopener noreferrer">
           Learn more
         </a>
       </mat-hint>
       <mat-hint
-        *ngIf="config.params.action === UPSERT_FEATURE_FLAG_ACTION.EDIT"
+        *ngIf="config.params.action === UPSERT_FEATURE_FLAG_ACTION.EDIT && isContextChanged"
         class="form-hint ft-12-400 warning-hint"
       >
         {{ 'feature-flags.upsert-flag-modal.app-context-warning.text' | translate }}
