Display loading progress bar for Segments list table

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -63,7 +63,7 @@
     <table
       class="segments-list"
       mat-table
-      [dataSource]="allSegments"
+      [dataSource]="(isLoadingSegments$ | async) ? [] : allSegments"
       matSort
       (matSortChange)="changeSorting($event)"
       [matSortActive]="segmentSortKey$ | async"
