correct alphabetical order for feature flag inclusion list values on focus change

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -47,6 +47,7 @@
         [placeholder]="config.valuesPlaceholder"
         [forceValidation]="forceValidation"
         (downloadRequested)="onDownloadRequested($event)"
+        (blur)="onBlur()"
       ></app-common-tags-input>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Name</mat-label>
