Fix the visibility of multiple-row chips and the alignment of the icon button

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -9,38 +9,40 @@
     {{ label | translate }}
     <span *ngIf="inputType === CommonTagInputType.VALUES" class="required-asterisk">*</span>
   </mat-label>
-  <div class="chips-container dense-2">
-    <mat-chip-grid #tagsList>
-      <mat-chip-row
-        *ngFor="let componentTag of tags.value"
-        [selectable]="isChipSelectable"
-        [removable]="isChipRemovable"
-        (removed)="removeChip(componentTag)"
-      >
-        <span class="chip-label">
-          {{ componentTag }}
-        </span>
-        <mat-icon matChipRemove *ngIf="isChipRemovable">cancel</mat-icon>
-      </mat-chip-row>
+  <div class="chips-wrapper">
+    <div class="chips-container dense-2">
+      <mat-chip-grid #tagsList>
+        <mat-chip-row
+          *ngFor="let componentTag of tags.value"
+          [selectable]="isChipSelectable"
+          [removable]="isChipRemovable"
+          (removed)="removeChip(componentTag)"
+        >
+          <span class="chip-label">
+            {{ componentTag }}
+          </span>
+          <mat-icon matChipRemove *ngIf="isChipRemovable">cancel</mat-icon>
+        </mat-chip-row>
 
-      <input
-        [matChipInputFor]="tagsList"
-        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-        [matChipInputAddOnBlur]="addChipOnBlur"
-        (matChipInputTokenEnd)="addChip($event)"
-        (focus)="onFocus()"
-        (blur)="onBlur()"
-        [placeholder]="tagsExist ? '' : (placeholder | translate)"
-        autocomplete="off"
-        class="ft-14-400"
-      />
-    </mat-chip-grid>
-    <div *ngIf="inputType === CommonTagInputType.VALUES" class="sharing-icon-buttons">
-      <button mat-icon-button class="icon-button" (click)="onActionButtonClick($event)">
-        <span class="material-symbols-outlined">
-          {{ tagsExist ? 'download' : 'upload' }}
-        </span>
-      </button>
+        <input
+          [matChipInputFor]="tagsList"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          [matChipInputAddOnBlur]="addChipOnBlur"
+          (matChipInputTokenEnd)="addChip($event)"
+          (focus)="onFocus()"
+          (blur)="onBlur()"
+          [placeholder]="tagsExist ? '' : (placeholder | translate)"
+          autocomplete="off"
+          class="ft-14-400"
+        />
+      </mat-chip-grid>
+      <div *ngIf="inputType === CommonTagInputType.VALUES" class="sharing-icon-buttons">
+        <button mat-icon-button class="icon-button" (click)="onActionButtonClick($event)">
+          <span class="material-symbols-outlined">
+            {{ tagsExist ? 'download' : 'upload' }}
+          </span>
+        </button>
+      </div>
     </div>
   </div>
 </mat-form-field>
