--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
@@ -7,6 +7,10 @@
 
     .mat-mdc-form-field-infix {
       padding: 6px 0;
+
+      .mat-mdc-chip-remove {
+        padding: 2px 4px;
+      }
     }
   }
 
@@ -30,9 +34,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     max-height: 64px;
     overflow: auto;
+    padding-right: 32px;
 
     .mat-mdc-chip-grid {
       width: 100%;
@@ -43,6 +48,10 @@
     }
 
     .icon-button {
+      position: absolute;
+      right: 8px;
+      top: 50%;
+      transform: translateY(-50%);
       width: 32px;
       height: 32px;
       background: none;
