--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.scss
@@ -12,6 +12,8 @@
   .import-segment-body {
     margin: 20px 0;
     padding: 0 40px;
+    height: 265px;
+    overflow-y: auto;
 
     .file-input {
       &:hover {
