--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
@@ -2,6 +2,8 @@
   <app-common-details-participant-list-table
     [tableType]="tableType"
     [dataSource]="dataSource$ | async"
+    [slideToggleDisabled]="slideToggleDisabled"
+    [actionsDisabled]="actionsDisabled"
     [isLoading]="isLoading$ | async"
     noDataRowText="feature-flags.details.inclusions.card.no-data-row.text"
     (rowAction)="onRowAction($event)"
