--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
@@ -3,7 +3,8 @@
     <mat-slide-toggle
       *ngIf="showSlideToggle"
       color="primary"
-      [checked]="isEnableToggleChecked"
+      [checked]="slideToggleChecked"
+      [disabled]="slideToggleDisabled"
       (change)="onSlideToggleChange($event)"
     >
       {{ slideToggleText }}
