--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-table/feature-flag-exclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-table/feature-flag-exclusions-table.component.html
@@ -2,6 +2,8 @@
   <app-common-details-participant-list-table
     [tableType]="tableType"
     [dataSource]="dataSource$ | async"
+    [slideToggleDisabled]="false"
+    [actionsDisabled]="actionsDisabled"
     [isLoading]="isLoading$ | async"
     noDataRowText="feature-flags.details.exclusions.card.no-data-row.text"
     (rowAction)="onRowAction($event)"
