--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -49,7 +49,12 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.ENABLE | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="enable-column ft-14-400">
-        <mat-slide-toggle color="primary" [checked]="rowData.enabled" (change)="onSlideToggleChange($event, rowData)">
+        <mat-slide-toggle
+          color="primary"
+          [checked]="rowData.enabled"
+          [disabled]="slideToggleDisabled"
+          (change)="onSlideToggleChange($event, rowData)"
+        >
         </mat-slide-toggle>
       </td>
     </ng-container>
@@ -60,10 +65,10 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.ACTIONS | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="actions-column ft-14-400 dense-2">
-        <button mat-icon-button class="action-button" (click)="onEditButtonClick(rowData)">
+        <button mat-icon-button class="action-button" [disabled]="actionsDisabled" (click)="onEditButtonClick(rowData)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button class="action-button" (click)="onDeleteButtonClick(rowData)">
+        <button mat-icon-button class="action-button" [disabled]="actionsDisabled" (click)="onDeleteButtonClick(rowData)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </td>
