--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.scss
@@ -86,6 +86,12 @@
 
       .action-button {
         color: var(--dark-grey);
+
+        &[disabled] {
+          .mat-icon {
+            opacity: 0.5;
+          }
+        }
       }
     }
   }
