Hide Feature Flag Enable Toggle Switch for Users with Reader Role

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -12,9 +12,8 @@
   <!-- header-right -->
   <app-common-section-card-action-buttons
     header-right
-    [showSlideToggle]="true"
+    [showSlideToggle]="(permissions$ | async)?.featureFlags.update"
     [slideToggleChecked]="flag.status === FEATURE_FLAG_STATUS.ENABLED"
-    [slideToggleDisabled]="!(permissions$ | async)?.featureFlags.update"
     [slideToggleText]="'feature-flags.enable.text' | translate"
     [showMenuButton]="true"
     [menuButtonItems]="menuButtonItems"
