Reverse actionsDisabled checking

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
@@ -22,7 +22,7 @@
   <app-feature-flag-exclusions-table
     content
     *ngIf="isSectionCardExpanded"
-    [actionsDisabled]="(permissions$ | async)?.featureFlags.update"
+    [actionsDisabled]="!(permissions$ | async)?.featureFlags.update"
     (rowAction)="onRowAction($event, flag.id)"
   ></app-feature-flag-exclusions-table>
 </app-common-section-card>
