(Release) Refine Disabled Slide Toggles and Action Buttons on 'Reader' mode  (#2032)
* Refine Disabled Slide Toggles and Action Buttons on 'Reader' mode (Release)

* Move common mat-mdc-slide-toggle styles to styles.scss

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.scss
@@ -9,11 +9,6 @@
     column-gap: 34px;
     padding: 0 16px;
 
-    ::ng-deep .mat-mdc-slide-toggle .mdc-label {
-      margin-left: 5px;
-      color: var(--dark-grey);
-    }
-
     .primary-button-text {
       padding: 0 8px;
     }
@@ -22,6 +17,7 @@
   .options-container {
     display: flex;
     column-gap: 4px;
+    cursor: not-allowed;
 
     .mat-mdc-icon-button:not(.mat-mdc-button-disabled) .mat-icon {
       color: var(--dark-grey);
